// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render should disable log analytics credentials form 1`] = `
<Fragment>
  <h3
    className="page-heading"
  >
    Azure Monitor Logs
  </h3>
  <Switch
    checked={true}
    label="Same details as Azure Monitor API"
    onChange={[Function]}
    tooltip="Workspaces are pulled from default subscription selected above."
  />
  <div
    className="gf-form-group"
  >
    <div
      className="gf-form-inline"
    >
      <div
        className="gf-form"
      >
        <FormLabel
          className="width-12"
          tooltip="Choose the default/preferred Workspace for Azure Log Analytics queries."
        >
          Default Workspace
        </FormLabel>
        <div
          className="width-25"
        >
          <Select
            allowCustomValue={false}
            autoFocus={false}
            backspaceRemovesValue={true}
            className=""
            components={
              Object {
                "Group": [Function],
                "IndicatorsContainer": [Function],
                "MenuList": [Function],
                "Option": [Function],
                "SingleValue": [Function],
              }
            }
            isClearable={false}
            isDisabled={false}
            isLoading={false}
            isMulti={false}
            isSearchable={true}
            maxMenuHeight={300}
            onChange={[Function]}
            openMenuOnFocus={false}
            options={Array []}
            tabSelectsValue={true}
          />
        </div>
      </div>
    </div>
    <div
      className="gf-form-inline"
    >
      <div
        className="gf-form"
      >
        <div
          className="max-width-30 gf-form-inline"
        >
          <Button
            disabled={true}
            onClick={[Function]}
            size="sm"
            type="button"
            variant="secondary"
          >
            Load Workspaces
          </Button>
        </div>
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`Render should enable azure log analytics load workspaces button 1`] = `
<Fragment>
  <h3
    className="page-heading"
  >
    Azure Monitor Logs
  </h3>
  <Switch
    checked={false}
    label="Same details as Azure Monitor API"
    onChange={[Function]}
  />
  <AzureCredentialsForm
    credentials={
      Object {
        "authType": "clientsecret",
        "azureCloud": "azuremonitor",
        "clientId": "44693801-6ee6-49de-9b2d-9106972f9572",
        "clientSecret": undefined,
        "defaultSubscriptionId": "e3fe4fde-ad5e-4d60-9974-e2f3562ffdf2",
        "tenantId": "e7f3f661-a933-4b3f-8176-51c4f982ec48",
      }
    }
    getSubscriptions={[MockFunction]}
    managedIdentityEnabled={false}
    onCredentialsChange={[Function]}
  />
  <div
    className="gf-form-group"
  >
    <div
      className="gf-form-inline"
    >
      <div
        className="gf-form"
      >
        <FormLabel
          className="width-12"
          tooltip="Choose the default/preferred Workspace for Azure Log Analytics queries."
        >
          Default Workspace
        </FormLabel>
        <div
          className="width-25"
        >
          <Select
            allowCustomValue={false}
            autoFocus={false}
            backspaceRemovesValue={true}
            className=""
            components={
              Object {
                "Group": [Function],
                "IndicatorsContainer": [Function],
                "MenuList": [Function],
                "Option": [Function],
                "SingleValue": [Function],
              }
            }
            isClearable={false}
            isDisabled={false}
            isLoading={false}
            isMulti={false}
            isSearchable={true}
            maxMenuHeight={300}
            onChange={[Function]}
            openMenuOnFocus={false}
            options={Array []}
            tabSelectsValue={true}
          />
        </div>
      </div>
    </div>
    <div
      className="gf-form-inline"
    >
      <div
        className="gf-form"
      >
        <div
          className="max-width-30 gf-form-inline"
        >
          <Button
            disabled={true}
            onClick={[Function]}
            size="sm"
            type="button"
            variant="secondary"
          >
            Load Workspaces
          </Button>
        </div>
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`Render should render component 1`] = `
<Fragment>
  <h3
    className="page-heading"
  >
    Azure Monitor Logs
  </h3>
  <Switch
    checked={false}
    label="Same details as Azure Monitor API"
    onChange={[Function]}
  />
  <AzureCredentialsForm
    credentials={
      Object {
        "authType": "clientsecret",
        "azureCloud": "azuremonitor",
        "clientId": undefined,
        "clientSecret": undefined,
        "defaultSubscriptionId": undefined,
        "tenantId": "",
      }
    }
    getSubscriptions={[MockFunction]}
    managedIdentityEnabled={false}
    onCredentialsChange={[Function]}
  />
  <div
    className="gf-form-group"
  >
    <div
      className="gf-form-inline"
    >
      <div
        className="gf-form"
      >
        <FormLabel
          className="width-12"
          tooltip="Choose the default/preferred Workspace for Azure Log Analytics queries."
        >
          Default Workspace
        </FormLabel>
        <div
          className="width-25"
        >
          <Select
            allowCustomValue={false}
            autoFocus={false}
            backspaceRemovesValue={true}
            className=""
            components={
              Object {
                "Group": [Function],
                "IndicatorsContainer": [Function],
                "MenuList": [Function],
                "Option": [Function],
                "SingleValue": [Function],
              }
            }
            isClearable={false}
            isDisabled={false}
            isLoading={false}
            isMulti={false}
            isSearchable={true}
            maxMenuHeight={300}
            onChange={[Function]}
            openMenuOnFocus={false}
            options={Array []}
            tabSelectsValue={true}
          />
        </div>
      </div>
    </div>
    <div
      className="gf-form-inline"
    >
      <div
        className="gf-form"
      >
        <div
          className="max-width-30 gf-form-inline"
        >
          <Button
            disabled={true}
            onClick={[Function]}
            size="sm"
            type="button"
            variant="secondary"
          >
            Load Workspaces
          </Button>
        </div>
      </div>
    </div>
  </div>
</Fragment>
`;
